--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
 set-option -g default-shell /bin/zsh
 set -g mouse on
-
+set -sg repeat-time 250
 bind-key -T copy-mode y copy-pipe "xclip -selection clipboard -i"
